# pabw-6

./: Cargo.toml
app/: .eslintrc.cjs  \  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
app/src/: Account.tsx  App.css  App.tsx  AppBar.tsx  Landing.tsx  Login.tsx  Product.tsx  dev.tsx  helper.tsx  index.scss  main.tsx
app/src/context/: User.ts
app/src/hooks/: useAuth.ts  useSWR.ts  useUser.ts
app/src/layouts/: AppDashboard.tsx  FormDashboard.tsx  ShowDashboard.tsx  TableDashboard.tsx
app/src/models/: Cart.ts  Product.ts  Transaction.ts  User.ts
app/src/utils/: error-handler.ts  formatter.ts
docs/: erd.puml  usecase.puml
docs/activity/: 01.01.login.puml  01.02.register.puml  02.01.melihat-barang.puml  02.02.menambah-barang.puml  02.03.menghapus-barang.puml  02.04.menyunting-barang.puml  03.01.melihat-semua-pengguna.puml  03.02.membuat-pengguna.puml  03.03.menghapus-pengguna.puml  03.04.menyunting-pengguna.puml  04.01.melihat-semua-kurir.puml  04.02.membuat-kurir.puml  04.03.menghapus-kurir.puml  04.04.menyunting-kurir.puml  05.01.membeli-barang.puml  05.02.melihat-status-pembelian.puml  05.03.membatalkan-pembelian.puml  05.04.mengkonfirmasi-barang-diterima.puml  05.05.melihat-keranjang.puml  05.06.menambahkan-ke-keranjang.puml  05.07.menghapus-dari-keranjang.puml  05.08.membeli-di-keranjang.puml
server/: Cargo.toml  cobertura.xml  tarpaulin-report.html
server/src/: app.rs  error.rs  lib.rs  main.rs  migrate.rs  mongo_ext.rs  util.rs
server/src/api/v1/: auth.rs  (+6 more)
src/: app.rs  lib.rs  util.rs
src/api/v1/: auth.rs
(+18 files in other folders)
