[package]
name = "ecommerce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = { version = "0.6.10", features = ["macros", "headers"] }
bson = { version = "2.5.0", features = ["time-0_3"] }
dotenvy = "0.15.6"
mongodb = { version = "2.4.0", features = ["tracing"] }
password-hash = { version = "0.5.0", features = ["std"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.39"
